--- a/index.html
+++ b/index.html
@@ -1,35 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
     <title>Weather App</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="script.js"></script>
 </head>
-<body class="text-center">
-    <main>
-        <h1 class="banner p-3">Weather</h1>
-        <div class="form-group">
-            <input id="city-input" class="form-control form-control-lg" type="text" placeholder="Search city">
+<body class="bg-gray-100 flex justify-center items-center min-h-screen">
+    <main class="bg-white p-8 rounded shadow-md w-full max-w-md">
+        <h1 class="banner text-3xl font-semibold text-center mb-4">Weather</h1>
+        <div class="mb-4">
+            <input id="city-input" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" type="text" placeholder="Search city">
         </div>
-        <button type="button" onclick="searchCity()" class="btn btn-lg btn-dark">Search</button>
-        <button type="button" onclick="clearData()" class="btn btn-lg btn-dark">Reset</button>
-        <div id="weather-output" class="mt-3">
-          <div class="card-deck mb-3 text-center">
-              <div class="card mb-4 shadow-sm">
-                <div class="card-header">
-                  <h4 id="city-name" class="my-0 font-weight-normal">----</h4>
-                </div>
-                <div class="card-body">
-                  <h1 id="weather-type" class="card-title">----</h1>
-                  <ul class="list-unstyled mt-3 mb-4">
+        <div class="flex justify-between">
+            <button type="button" onclick="searchCity()" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Search</button>
+            <button type="button" onclick="clearData()" class="bg-gray-400 hover:bg-gray-600 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Reset</button>
+        </div>
+        <div id="weather-output" class="mt-6">
+            <div class="bg-gray-100 rounded p-4">
+                <h2 id="city-name" class="text-xl font-bold mb-2">----</h2>
+                <h3 id="weather-type" class="text-gray-700 text-lg">----</h3>
+                <ul class="mt-3">
                     <li>Temp: <span id="temp">--</span>°</li>
                     <li>Min Temp: <span id="min-temp">--</span>°</li>
                     <li>Max Temp: <span id="max-temp">--</span>°</li>
-                  </ul>
-                </div>
-              </div>
-          </div>
+                </ul>
+            </div>
         </div>
     </main>
 </body>
